--- a/things-selector-content-by-entity.html
+++ b/things-selector-content-by-entity.html
@@ -206,11 +206,12 @@
 				ownerType: {
 					type: String
 				},
-          /**
-           * valueField
-           * ********
-           * @type {String}
-           */
+
+				/**
+				 * value로 설정될 필드명
+				 * ******
+				 * @type {String}
+				 */
 				valueField: {
 					type: String
 				}
@@ -228,7 +229,7 @@
 
 			/**
 			 * 엔티티 메타데이터 변경시
-			 *
+			 *********
 			 * @param {Object} entity
 			 */
 			_entityChanged: function(entity) {
@@ -239,7 +240,7 @@
 
 			/**
 			 * ownerElement가 변경되었을 경우
-			 *
+			 *********
 			 * @param {Object} ownerElement
 			 */
 			_ownerElementChanged: function(ownerElement) {
@@ -253,7 +254,7 @@
 
 			/**
 			 * 조회 데이터 변경시
-			 *
+			 *********
 			 * @param {Object} lastResponse
 			 */
 			_responseChanged: function(lastResponse) {
@@ -264,6 +265,7 @@
 			/**
 			 * ID Field를 리턴한다.
 			 * *******
+			 * @return {String} id 값으로 사용될 필드명
 			 */
 			getIdField: function() {
 				return (this.entity && this.entity.id_field) ? this.entity.id_field : 'id';
@@ -272,13 +274,16 @@
 			/**
 			 * Title Field를 리턴한다.
 			 * ********
+			 * @return {String} title 값으로 사용될 필드명
 			 */
 			getTitleField: function() {
 				return (this.entity && this.entity.title_field) ? this.entity.title_field : 'name';
 			},
+
 			/**
 			 * Description Field를 리턴한다.
 			 * ********
+			 * @return {String} description 값으로 사용될 필드명
 			 */
 			getDescriptionField: function() {
 				return (this.entity && this.entity.description_field) ? this.entity.description_field : 'description';
@@ -382,7 +387,7 @@
 
 			/**
 			 * Owner가 Form인 경우에 데이터 선택시
-			 *
+			 *********
 			 * @param {Object} event
 			 */
 			_selectRecordByForm: function(event) {
@@ -412,7 +417,7 @@
 
 			/**
 			 * bindFields 정보를 기반으로 targetData에 sourceData의 데이터를 설정한다.
-			 *
+			 *********
 			 * @param {Object} sourceData
 			 * @param {Object} targetData
 			 */
@@ -439,7 +444,7 @@
 
 			/**
 			 * Owner가 Grid인 경우에 데이터 선택시
-			 *
+			 *********
 			 * @param {Object} event
 			 */
 			_selectRecordByGrid: function(event) {
@@ -481,29 +486,40 @@
 
 			/**
 			 * 사용자가 선택한 레코드에서 Resource Value (Object)를 리턴
+			 *********
+			 * @param {Object} selectedResource 현재 선택한 레코드 값
+			 * @param {Object} objToChange Owner Grid의 선택된 레코드의 필드 Object 값  
+			 * @param {String} idField id 값으로 사용할 필드명
+			 * @param {String} titleField title 값으로 사용할 필드명
+			 * @param {String} descriptionField description 값으로 사용할 필드명
+			 * @return {Object} 선택된 레코드의 값
 			 */
 			_getResourceValueOfSelectedRecord: function(selectedResource, objToChange, idField, titleField, descriptionField) {
-					if(typeof(objToChange) === 'undefined' || objToChange === null) {
-						objToChange = {};
-					}
+				if(typeof(objToChange) === 'undefined' || objToChange === null) {
+					objToChange = {};
+				}
 
-					if(typeof(objToChange) == 'object') {
-						objToChange[idField] = selectedResource[idField];
-						objToChange[titleField] = selectedResource[titleField];
-						objToChange[descriptionField] = selectedResource[descriptionField];
+				if(typeof(objToChange) == 'object') {
+					objToChange[idField] = selectedResource[idField];
+					objToChange[titleField] = selectedResource[titleField];
+					objToChange[descriptionField] = selectedResource[descriptionField];
 
-					} else if(typeof(objToChange) == 'string') {
-						objToChange = selectedResource[titleField];
+				} else if(typeof(objToChange) == 'string') {
+					objToChange = selectedResource[titleField];
 
-					} else if(typeof(objToChange) == 'number') {
-						objToChange = selectedResource[idField];
-					}
+				} else if(typeof(objToChange) == 'number') {
+					objToChange = selectedResource[idField];
+				}
 
-					return objToChange;
+				return objToChange;
 			},
 
 			/**
 			 * 사용자가 선택한 레코드 중에 valueField에 해당하는 값을 리턴
+			 *********
+			 * @param {Object} selectedResource
+			 * @param {String} valueField
+			 * @return {String} 선택된 레코드의 valueField에 해당하는 값
 			 */
 			_getSingleValueOfSelectedRecord: function(selectedResource, valueField) {
 				return selectedResource[valueField];
@@ -520,6 +536,7 @@
 			/**
 			 * Resource Selector의 Container 폼을 찾아 리턴
 			 * ********
+			 * @param {Object} element
 			 */
 			findOwnerDialog: function(element) {
 				if(!element.parentElement) {
