--- a/things-selector-content-by-menu.html
+++ b/things-selector-content-by-menu.html
@@ -218,7 +218,7 @@
 
 			/**
 			 * 메뉴 메타데이터 변경시
-		   *
+		   *********
 			 * @param {Object} menuInfo
 			 */
 			_menuInfoChanged: function(menuInfo) {
@@ -240,7 +240,7 @@
 
 			/**
 			 * ownerElement가 변경되었을 경우
-			 *
+			 *********
 			 * @param {Object} ownerElement
 			 */
 			_ownerElementChanged: function(ownerElement) {
@@ -254,7 +254,7 @@
 
 			/**
 			 * 조회 데이터 변경시
-			 *
+			 *********
 			 * @param {Object} lastResponse
 			 */
 			_responseChanged: function(lastResponse) {
@@ -265,6 +265,7 @@
 			/**
 			 * ID Field를 리턴한다.
 			 * ********
+			 * @return {String} id 값으로 사용될 필드명을 리턴
 			 */
 			getIdField: function() {
 				return (this.menuInfo && this.menuInfo.id_field) ? this.menuInfo.id_field : 'id';
@@ -273,21 +274,26 @@
 			/**
 			 * Title Field를 리턴한다.
 			 * ********
+			 * @return {String} title 값으로 사용될 필드명을 리턴
 			 */
 			getTitleField: function() {
 				return (this.menuInfo && this.menuInfo.title_field) ? this.menuInfo.title_field : 'name';
 			},
+
 			/**
 			 * Description Field를 리턴한다.
 			 * ********
+			 * @return {String} description 값으로 사용될 필드명을 리턴
 			 */
 			getDescriptionField: function() {
 				return (this.entity && this.entity.description_field) ? this.entity.description_field : 'description';
 			},
+
 			/**
 			 * reload grid data
 			 * 결국 서치 폼에서 다시 검색한다.
 			 * *******
+			 * @param {Object} grid
 			 */
 			refreshGridData: function(grid) {
 				this.preprocessInitialParams();
@@ -382,7 +388,7 @@
 
 			/**
 			 * Owner가 Form인 경우에 데이터 선택시
-			 *
+			 **********
 			 * @param {Object} event
 			 */
 			_selectRecordByForm: function(event) {
@@ -412,7 +418,7 @@
 
 			/**
 			 * bindFields 정보를 기반으로 targetData에 sourceData의 데이터를 설정한다.
-			 *
+			 **********
 			 * @param {Object} sourceData
 			 * @param {Object} targetData
 			 */
@@ -439,7 +445,7 @@
 
 			/**
 			 * Owner가 Grid인 경우에 데이터 선택시
-			 *
+			 *********
 			 * @param {Object} event
 			 */
 			_selectRecordByGrid: function(event) {
@@ -481,29 +487,39 @@
 
 			/**
 			 * 사용자가 선택한 레코드에서 Resource Value (Object)를 리턴
+			 **********
+			 * @param {Object} selectedResource 현재 선택한 레코드 값
+			 * @param {Object} objToChange Owner Grid의 선택된 레코드의 필드 Object 값
+			 * @param {String} idField id 값으로 사용할 필드명
+			 * @param {String} titleField title 값으로 사용할 필드명
+			 * @param {String} descriptionField description 값으로 사용할 필드명
+			 * @return {Object} 선택된 레코드 (Object) 값
 			 */
-			_getResourceValueOfSelectedRecord: function(selectedResource, objToChange, idField, titleField,descriptionField) {
-					if(typeof(objToChange) === 'undefined' || objToChange === null) {
-						objToChange = {};
-					}
+			_getResourceValueOfSelectedRecord: function(selectedResource, objToChange, idField, titleField, descriptionField) {
+				if(typeof(objToChange) === 'undefined' || objToChange === null) {
+					objToChange = {};
+				}
 
-					if(typeof(objToChange) == 'object') {
-						objToChange[idField] = selectedResource[idField];
-						objToChange[titleField] = selectedResource[titleField];
-						objToChange[descriptionField] = selectedResource[descriptionField];
+				if(typeof(objToChange) == 'object') {
+					objToChange[idField] = selectedResource[idField];
+					objToChange[titleField] = selectedResource[titleField];
+					objToChange[descriptionField] = selectedResource[descriptionField];
 
-					} else if(typeof(objToChange) == 'string') {
-						objToChange = selectedResource[titleField];
+				} else if(typeof(objToChange) == 'string') {
+					objToChange = selectedResource[titleField];
 
-					} else if(typeof(objToChange) == 'number') {
-						objToChange = selectedResource[idField];
-					}
+				} else if(typeof(objToChange) == 'number') {
+					objToChange = selectedResource[idField];
+				}
 
-					return objToChange;
+				return objToChange;
 			},
 
 			/**
 			 * 사용자가 선택한 레코드 중에 valueField에 해당하는 값을 리턴
+			 **********
+			 * @param {Object} selectedResource 선택된 리소스 값
+			 * @param {String} valueField value로 사용할 필드명
 			 */
 			_getSingleValueOfSelectedRecord: function(selectedResource, valueField) {
 				return selectedResource[valueField];
@@ -511,6 +527,7 @@
 
 			/**
 			 * Close Resource Selector Dialog
+			 **********
 			 */
 			closeResourceSelectorDialog: function() {
 				this.fire('things-dialog-close');
@@ -519,6 +536,7 @@
 			/**
 			 * Resource Selector의 Container 폼을 찾아 리턴
 			 * *******
+			 * @param {Object} element
 			 */
 			findOwnerDialog: function(element) {
 				if(!element.parentElement) {
