--- a/things-selector-form-search-behavior.html
+++ b/things-selector-form-search-behavior.html
@@ -87,6 +87,7 @@ Things.SelectorFormSearchBehaviorImpl = {
   /**
    * 현재 페이지가 변경되었을 때 액션
    * 페이지가 변경된 경우 해당 페이지로 다시 검색한다.
+   ********
    * @param {Number} page 현재 페이지
    */
   _pageChanged: function(page) {
@@ -98,7 +99,7 @@ Things.SelectorFormSearchBehaviorImpl = {
   /**
    * paramType이 'RESOURCE'일 경우에 Search Parameters인 queryFields를 초기화하고
    * 파라미터 정보로 부터 다시 queryFields를 설정한다.
-   *
+   ********
    * @param {Object} params
    */
   _resetResourceSearchParams: function(params) {
@@ -128,6 +129,7 @@ Things.SelectorFormSearchBehaviorImpl = {
 
   /**
    * 조회 전에 초기 파라미터를 파싱하여 폼에 데이터를 입력 해준다.
+   ********
    */
   _bindInitialParams: function() {
     if(!this.initialParams) return;
@@ -150,6 +152,7 @@ Things.SelectorFormSearchBehaviorImpl = {
    * Submit 전에 전처리 핸들
    * Pagination을 사용하는 경우에 page, limit 정보를 파라미터에 추가한다.
    * *******
+   * @param {Object} event
    */
   handleBeforeSubmit: function(event) {
     var form = event.srcElement;
@@ -192,7 +195,6 @@ Things.SelectorFormSearchBehaviorImpl = {
   handleErrorResponse: function(sucessResponse) {
     this.fire('things-form-submit-error', sucessResponse);
   }
-
 };
 
 Things.SelectorFormSearchBehavior = [
