리소스 셀렉터에서 데이터 선택시 더블 클릭시 메시지 박스가 사라지는 현상 픽스

--- a/things-selector-content-by-entity.html
+++ b/things-selector-content-by-entity.html
@@ -59,6 +59,7 @@
 				data="[[items]]"
 				total-count="[[itemCount]]"
 				fixed-column-count="0"
+				prevent-multi-click-event
 				paginatable>
 			</things-resource-grid>
 		</div>
