Iron-form 1.1.5 업데이트에 따른 Fix

--- a/things-selector-form.html
+++ b/things-selector-form.html
@@ -71,6 +71,7 @@
     <paper-material elevation="0" class="flex" on-keypress="handleKeyPress">
       <form is="iron-form"
             action="[[action]]"
+            method="GET"
             content-type="[[contentType]]"
             last-response ="{{lastResponse}}"
             with-credentials="[[withCredentials]]">
