ResourceSelector - idField, titleField를 설정안 한 경우 ResourceSelectorContent에서 설정하도록 수정

--- a/things-selector-content-by-menu.html
+++ b/things-selector-content-by-menu.html
@@ -403,14 +403,16 @@
 
 				// Container에서 필요한 대표 컬럼 및 선택한 값을 설정한다.
 				} else {
-					var resourceIdField = this.ownerElement.resourceIdField;
-					this.ownerElement.resourceIdField = (resourceIdField) ? resourceIdField : this.getIdField();
+					if(!this.ownerElement.resourceIdField) {
+						this.ownerElement.resourceIdField = this.getIdField();
+					}
 
-					var resourceTitleField = this.ownerElement.resourceTitleField;
-					this.ownerElement.resourceTitleField = (resourceTitleField) ? resourceTitleField : this.getTitleField();
+					if(!this.ownerElement.resourceTitleField) {
+						this.ownerElement.resourceTitleField = this.getTitleField();
+					}
 
-					var idValue = selectedResource[this.getIdField()];
-					var displayValue = selectedResource[this.getTitleField()];
+					var idValue = selectedResource[this.ownerElement.resourceIdField];
+					var displayValue = selectedResource[this.ownerElement.resourceTitleField];
 					this.ownerElement.setResourceValue(idValue, displayValue, selectedResource);
 				}
 
