--- a/demo/demo-resource-field.html
+++ b/demo/demo-resource-field.html
@@ -1,13 +1,8 @@
-<!doctype html>
 <!--
 @license
-Copyright (c) 2016 The Things Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at https://github.com/hatiolab/things-elidom.git/LICENSE.txt
-The complete set of authors may be found at https://github.com/hatiolab/things-elidom.git/AUTHORS.txt
-The complete set of contributors may be found at https://github.com/hatiolab/things-elidom.git/CONTRIBUTORS.txt
-Code distributed by Hatiolab as part of the things project is also
-subject to an additional IP rights grant found at https://github.com/hatiolab/things-elidom.git/PATENTS.txt
+Copyright (c) 2017, HatioLab Inc. All right reserved.
 -->
+<!doctype html>
 <html>
 <head>
 
@@ -18,14 +13,14 @@ subject to an additional IP rights grant found at https://github.com/hatiolab/th
   <title>things-resource-field-demo</title>
 
   <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-  
-  <link rel="import" href="../../polymer/polymer.html">
+
+    <link rel="import" href="../../polymer/polymer.html">
   <link rel="import" href="../../paper-input/paper-input.html">
   <link rel="import" href="../../paper-styles/color.html">
   <link rel="import" href="../../paper-styles/demo-pages.html">
   <link rel="import" href="../../paper-toast/paper-toast.html">
-  
-  <link rel="import" href="../../things-ajax/things-ajax.html">
+
+    <link rel="import" href="../../things-ajax/things-ajax.html">
   <link rel="import" href="../../things-button/things-button.html">
   <link rel="import" href="../../things-spinner/things-spinner.html">
   <link rel="import" href="../../things-setting/things-setting.html">
