값 변경 이벤트 추가. :: setResourceValue()가 여러곳에 있음, 구체 구분을 알수 없음. 개선 필요.

--- a/things-resource-field.html
+++ b/things-resource-field.html
@@ -320,6 +320,14 @@ Resource field. 서버에 저장되어 있는 리소스 정보를 조회하여 i
       setResourceValue: function(idValue, displayValue) {
         this.idValue = idValue;
         this.displayValue = displayValue;
+
+        var event = new CustomEvent('selector-value-selected', {
+          detail: { submitName: this.submitName, value: idValue, display: displayValue },
+          bubbles: true
+        })
+
+        this.dispatchEvent(event);
+        
         this.validate();
       },
 
