--- a/demo/index.html
+++ b/demo/index.html
@@ -4,86 +4,57 @@ Copyright © HatioLab Inc. All rights reserved.
 -->
 <!doctype html>
 <html>
-<head>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+    <title>things-resource-dialog Demo</title>
+    <script src="../../webcomponentsjs/webcomponents-lite.min.js"></script>
+    <link rel="import" href="../../paper-button/paper-button.html">
+    <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
+    <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
+    <link rel="import" href="../../things-i18n-msg/things-i18n-msg.html">
+    <link rel="import" href="../../things-theme/things-xmes-theme.html">
+    <link rel="import" href="../things-resource-dialog.html">
+  </head>
+  <body unresolved>
+      <h3>Things Combo</h3>
+      <h4>Value에서 값을 넣으면, Display과Label에서 적용되고, Label에서도 값을 체크할 수 있다.</h4>
+      <demo-snippet class="centered-demo">
+        <template>
+          <style is="custom-style" include="things-xmes-theme"></style>
+          <template is="dom-bind">
+            <things-i18n-msg></things-i18n-msg>
+            <things-resource-dialog></things-resource-dialog>
+            <button raised onclick="openDialog()">open dialog</button>
+            <script>
+              function openDialog(){
+                var element = document.querySelector('things-resource-dialog');
+                var dialog = element.getDialog();
+                var view = document.createElement('input');
+                view.title = 'TEST'
+                element.title = view.title;
+                element.dialogSize = 'size5';
+                dialog.modal = true;
+                var scrollable = element.$.scrollroot;
 
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1, user-scalable=yes">
+                if(element.detailView) {
+                  try {
+                    scrollable.removeChild(element.detailView);
+                  } catch(e) {
+                    console.log(e);
+                  }
+                }
+                
+                element.detailView = view;
+                element.openCallback = null;
+                element.closeCallback = null;
+                scrollable.appendChild(element.detailView);
+                dialog.open();
+              }
+            </script>
+          </template>
+        </template>
+      </demo-snippet>
 
-  <title>things-resource-dialog demo</title>
-
-  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
-
-    <link rel="import" href="../../polymer/polymer.html">
-  <link rel="import" href="../../paper-input/paper-input.html">
-  <link rel="import" href="../../paper-styles/color.html">
-  <link rel="import" href="../../paper-styles/demo-pages.html">
-  <link rel="import" href="../../paper-toast/paper-toast.html">
-
-    <link rel="import" href="../../things-ajax/things-ajax.html">
-  <link rel="import" href="../../things-button/things-button.html">
-  <link rel="import" href="../../things-spinner/things-spinner.html">
-  <link rel="import" href="../../things-setting/things-setting.html">
-
-  <link rel="import" href="../things-resource-dialog.html">
-
-  <link rel="stylesheet" href="../../paper-styles/demo.css">
-
-  <style is="custom-style">
-
-    .output {
-      margin-top: 20px;
-      word-wrap: break-word;
-      @apply(--paper-font-common-code);
-    }
-    form > paper-button {
-      width: 45%;
-      margin-top: 20px;
-    }
-    form > paper-button:not([disabled]) {
-      background: var(--paper-light-blue-500);
-      color: white;
-    }
-    button {
-      margin-top: 20px;
-    }
-    paper-spinner {
-      width: 14px;
-      height: 14px;
-      margin-right: 20px;
-    }
-    paper-dropdown-menu {
-      display: block;
-    }
-    demo-snippet {
-      --demo-snippet-code: {
-        max-height: 300px;
-      };
-    }
-
-  </style>
-
-</head>
-<body unresolved>
-
-  <dom-module id="sample-resource-dialog">
-    <template>
-      <things-resource-dialog></things-resource-dialog>
-    </template>
-
-    <script>
-      Polymer({
-        is: "sample-resource-dialog",
-      });  
-    </script>
-  </dom-module>
-
-  <template is="dom-bind" id="app">
-    <section>
-      <h4>Things Resource Dialog</h4>
-      <sample-resource-dialog></sample-resource-dialog>
-    </section>    
-  </template>
-
-</body>
+  </body>
 </html>
